...
            return "Photo and Age Over 21"
        case .portraitNameRetainAndAgeOver18:
            return "Photo and Name (Retain) and Age Over 18"
        case .nameMissingPortrait:
            return "Name (Missing Photo)"
        case .nameTitleRetainAndAgeOver23:
            return "Name + Title (Retain) and Age Over 23"
        }
    }

    var attributeGroup: AttributeGroup? {
        switch self {
        case .portraitAndAgeOver21:
...
